--- a/Mentions/Mentions.html
+++ b/Mentions/Mentions.html
@@ -5,6 +5,7 @@
             <li><a href='https://query.wikidata.org/bigdata/namespace/wdq/sparql?query=%23Paintings%0ASELECT %3Fitem %3FitemLabel WHERE {%0A %3Fitem wdt%3AP31 wd%3AQ3305213.%0A SERVICE wikibase%3Alabel { bd%3AserviceParam wikibase%3Alanguage "[AUTO_LANGUAGE]%2Cfr%2Cen". }%0A}'>Query paintings (224.387)</a></li>
             <li><a href='https://query.wikidata.org/bigdata/namespace/wdq/sparql?query=%23Paintings%0ASELECT %3Fitem %3FitemLabel %3Fimage WHERE {%0A %3Fitem wdt%3AP31 wd%3AQ3305213.%0A %3Fitem wdt%3AP18 %3Fimage.%0A SERVICE wikibase%3Alabel { bd%3AserviceParam wikibase%3Alanguage "[AUTO_LANGUAGE]%2Cfr%2Cen". }%0A}'>Query paintings with image (62.951)</a></li>
             <li><a href='https://query.wikidata.org/bigdata/namespace/wdq/sparql?query=%23Paintings%0ASELECT %3Fitem WHERE {%0A %3Fitem wdt%3AP31 wd%3AQ3305213.%0A %3Fitem wdt%3AP18 %3Fimage.%0A %3Fitem wdt%3AP180 %3Fdepict.%0A SERVICE wikibase%3Alabel { bd%3AserviceParam wikibase%3Alanguage "[AUTO_LANGUAGE]%2Cfr%2Cen". }%0A} GROUP BY %3Fitem'>Query paintings with image and depict 23.726</a></li>
+            <li><a href="http://tinyurl.com/kcofndk" target="_blank">Stats</a></li>
         </ul>
     </div>
 </div>
