--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>ImageDescriber</title>
+    <title>ImageDescription</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -29,10 +29,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <div class="navbar-brand" id="home-logo">
-                    <h1 style="display: inline; margin-left: 20px;"><a href="#!/Home">ImageDescriber</a></h1></div>
+                    <h1 style="display: inline; margin-left: 20px;"><a href="#!/Home">ImageDescription</a></h1></div>
             </div>
             <div class="collapse navbar-collapse">
-
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#!/mentions-legales" class="text-muted">Mentions légales</a></li>
+                    <li><a href="https://www.wikidata.org" target="_blank"><img src="web/images/wikidata.png" style="max-height: 25px;" /></a></li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -43,26 +46,13 @@
             </section>
         </div>
     </section>
-    <footer class="navbar-inverse navbar-fixed-bottom">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="pull-right">
-                        <a href="https://www.wikidata.org" target="_blank"><img src="web/images/wikidata.png" style="max-height: 25px;" /></a>
-                    </div>
-                    <div class="text-center">
-                        <a href="#!/mentions-legales" class="text-muted">Mentions légales</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
     <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="web/angular-libraries/yaml-js/dist/yaml.min.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="Home/Home.js"></script>
