--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="web/angular-libraries/yaml-js/dist/yaml.min.js"></script>
+    <script src="web/js-libraries/md5/js/md5.min.js"></script>
+
+    <script type="application/javascript">
+
+    </script>
+    <script type="application/javascript" src=""></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="Home/Home.js"></script>
