--- a/Home/tpl/Home-image.html
+++ b/Home/tpl/Home-image.html
@@ -3,26 +3,25 @@
     <div class="caption text-left">
         <div class="list-group">
             <div class="list-group-item">
-                <h2 class="list-group-item-heading">{{ item.label }}</h2>
+                <h2 class="list-group-item-heading"><a href="https://www.wikidata.org/wiki/Q{{ item.qwd }}" target="_blank" class="h2a">{{ item.label }}</a></h2>
                 <p>{{ item.description }}</p>
-                <a href="https://www.wikidata.org/wiki/Q{{ item.qwd }}" target="_blank">{{ page.translation.home.id1 }}</a>
-                <span ng-if="item.url != null"> - <a href="{{ item.url }}" target="_blank">{{ page.translation.home.id13 }}</a></span>
+                <span ng-if="item.url.length > 0"><a ng-repeat="url in item.url" href="{{ url.value }}" target="_blank">{{ page.translation.home.id13 }}</a></span>
             </div>
-            <dl class="list-group-item dl-horizontal" ng-if="item.creator != null">
+            <dl class="list-group-item dl-horizontal" ng-if="item.creator.length > 0">
                 <dt>{{ page.translation.home.id14 }}</dt>
-                <dd>{{ item.creator }}</dd>
+                <dd><span ng-repeat="creator in item.creator"><a href="http://wikidata.org/wiki/{{ creator.qwd }}" target="_blank">{{ creator.label }}</a></span></dd>
             </dl>
-            <dl class="list-group-item dl-horizontal" ng-if="item.date_creation != null">
+            <dl class="list-group-item dl-horizontal" ng-if="item.date_creation.length > 0">
                 <dt>{{ page.translation.home.id15 }}</dt>
-                <dd>{{ item.date_creation }}</dd>
+                <dd><span ng-repeat="date_creation in item.date_creation">{{ date_creation.label }}</span></dd>
             </dl>
-            <dl class="list-group-item dl-horizontal" ng-if="item.collection != null">
+            <dl class="list-group-item dl-horizontal" ng-if="item.collection.length > 0">
                 <dt>{{ page.translation.home.id16 }}</dt>
-                <dd>{{ item.collection }}</dd>
+                <dd><span ng-repeat="collection in item.collection"><a href="http://wikidata.org/wiki/{{ collection.qwd }}" target="_blank">{{ collection.label }}</a></span></dd>
             </dl>
-            <dl class="list-group-item dl-horizontal" ng-if="item.genre != null">
+            <dl class="list-group-item dl-horizontal" ng-if="item.genre.length > 0">
                 <dt>{{ page.translation.home.id17 }}</dt>
-                <dd>{{ item.genre }}</dd>
+                <dd><span ng-repeat="genre in item.genre"><a href="http://wikidata.org/wiki/{{ genre.qwd }}" target="_blank">{{ genre.label }}</a></span></dd>
             </dl>
         </div>
     </div>
