--- a/Home/tpl/Home-top.html
+++ b/Home/tpl/Home-top.html
@@ -10,7 +10,24 @@
     <div>
         <h2>Aidez-nous !</h2>
     </div>
-    <p>Aidez la communauté Open Data à identifier les sujets de ces peintures !</p>
+    <p class="lead">Aidez la communauté Open Data à identifier les sujets de ces peintures !</p>
+    <div class="text-center">
+        <img src="./web/images/wikidata-logo.png" style="max-height: 200px" alt="Logo de Wikidata"/>
+    </div>
+    <br />
+    <div class="text-left">
+        <p style="font-size: 17px !important;"><strong>Wikidata</strong>, la base de données libre et ouverte portée par Wikimedia, <strong>recense à ce jour plus de <a>300.000 oeuvres peintes</a></strong>.
+            Il s'agit d'un fond d'une <strong>richesse extraordinaire</strong>, offrant des possibilités inédites aux chercheurs et professionnels de l'histoire, de l'histoire de l'art, et aux curieux et passionnés.</p>
+        <p style="font-size: 17px !important;"><strong>Pour exploiter au maximum</strong> cette formidable source de richesse, il est impératif de <strong>décrire les œuvres</strong> et tout particulièrement ce qui est représenté sur ces dernières.<br />
+            <strong>À peine de <a>10% de ces œuvres</a></strong> sont actuellement décrites sur Wikidata.</p>
+        <p class="lead text-center">Ce projet ambitionne de décrire les 270.000 autres !</p>
+        <p style="font-size: 17px !important;">Pour cela <strong>nous avons besoin de vous</strong>, internautes qui sans le savoir utilisé quotidiennement les ressources et la richesse de Wikidata, lors de vos recherches sur Wikipédia ou Google.</p>
+        <p style="font-size: 17px !important;">Pour nous aider, rien de plus simple : <strong>décrivez simplement ce que vous voyez</strong>.
+            Si un tableau représente un homme portant un chapeau, saisissez "homme" puis "chapeau".
+            Ces deux petites actions nous permettront ensuite de référencer correctement l'œuvre que vous aurez indexée.</p>
+    </div>
+    <p class="lead"><strong>Merci pour votre contribution !</strong></p>
+    <p>Diffuser le projet</p>
     <div class="text-center">
         <a ng-click="topManagement()" class="a"><i class="fa fa-5x fa-chevron-up"></i></a>
     </div>
