--- a/Home/Home.html
+++ b/Home/Home.html
@@ -10,6 +10,7 @@
         <div class="row" ng-if="page.loading == false">
             <div class="col-sm-6 text-center" ng-include="'Home/tpl/Home-image.html'"></div>
             <div class="col-sm-6" ng-include="'Home/tpl/Home-depict.html'"></div>
+            <div class="col-sm-6" ng-include="'Home/tpl/Home-game.html'"></div>
         </div>
     </div>
 </div>
