--- a/Home/tpl/Home-game.html
+++ b/Home/tpl/Home-game.html
@@ -1,38 +1,47 @@
 <hr />
 <div id="game">
-    <div ng-if="user.xp == 0">
-        <strong>Tu es niveau 0 !</strong><br />
-        Saisis une information pour commencer à monter dans le classement <i class="fa fa-smile-o"></i>
+    <div ng-if="user.xp.current == 0">
+        <strong>{{ page.translation.home.gameid1 }}</strong><br />
+        {{ page.translation.home.gameid2 }} <i class="fa fa-smile-o"></i>
     </div>
-    <div ng-if="user.xp > 0">
-        <div><label>Tu es niveau {{ user.level }} ! Plus que {{ user.xpUp-user.xp }} points avant le niveau {{ user.level+1 }}.</label></div>
+    <div ng-if="user.xp.current > 0">
+        <div><label ng-bind-html="page.translation.home.gameid3"></label></div>
         <div class="row">
             <div class="col-sm-10">
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.xp-user.xpDown }}" aria-valuemin="0" aria-valuemax="{{ user.xpUp-user.xpDown }}" style="width: {{ ((user.xp-user.xpDown)*100)/(user.xpUp-user.xpDown) }}%">
-                        <span class="sr-only">{{ ((user.xp-user.xpDown)*100)/(user.xpUp-user.xpDown) }}% Complete</span>
+                    <div class="progress-bar" ng-class="progressbar()" role="progressbar" aria-valuenow="{{ user.xp.current-user.xp.down }}" aria-valuemin="0" aria-valuemax="{{ user.xp.up-user.xp.down }}" style="width: {{ ((user.xp.current-user.xp.down)*100)/(user.xp.up-user.xp.down) }}%">
+                        <span class="sr-only">{{ ((user.xp.current-user.xp.down)*100)/(user.xp.up-user.xp.down) }}% Complete</span>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-2"><i class="fa fa-chevron-right"></i> Niveau {{ user.level+1 }}</div>
+            <div class="col-sm-2"><i class="fa fa-chevron-right"></i><span ng-bind-html="page.translation.home.gameid4"></span></div>
         </div>
     </div>
 </div>
 
 <table class="table table-striped table-borded" style="margin-top: 30px;">
-    <caption>Top contributors</caption>
+    <caption>
+        <div class="pull-right">
+            <span ng-if="user.rank.computed == 1" ng-bind-html="page.translation.home.gameid5"></span>
+            <span ng-if="user.rank.computed == 2" ng-bind-html="page.translation.home.gameid6"></span>
+            <span ng-if="user.rank.computed > 2 && user.rank.computed <= 5" ng-bind-html="page.translation.home.gameid7"></span>
+            <span ng-if="user.rank.computed > 5 && user.rank.computed <= 50" ng-bind-html="page.translation.home.gameid8"></span>
+            <span ng-if="user.rank.computed > 50">{{ user.rank.computed }}</span>
+        </div>
+        {{ page.translation.home.gameid9 }}
+    </caption>
     <tr>
         <th>#</th>
-        <th>Points</th>
+        <th>{{ page.translation.home.gameid10 }}</th>
     </tr>
     <tr ng-repeat="rankF in user.rank.firsts">
         <td ng-if="rankF != null">{{ rankF._embedded.computed }}</td>
         <td ng-if="rankF == null" class="success">{{ user.rank.computed }}</td>
         <td ng-if="rankF != null">{{ rankF.value }}</td>
-        <td ng-if="rankF == null" class="success">{{ user.xp }}</td>
+        <td ng-if="rankF == null" class="success">{{ user.xp.current }}</td>
     </tr>
     <tr ng-if="user.rank.computed > user.rank.firsts.length" class="success">
         <td>{{ user.rank.computed }}</td>
-        <td>{{ user.xp }}</td>
+        <td>{{ user.xp.current }}</td>
     </tr>
 </table>
