--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#!/mentions-legales" class="text-muted">Mentions légales</a></li>
+                    <li><a href="#!/mentions-legales" class="text-muted">Usage</a></li>
                     <li><a href="https://www.wikidata.org" target="_blank"><img src="web/images/wikidata.png" style="max-height: 25px;" /></a></li>
                 </ul>
             </div>
@@ -50,6 +50,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-sanitize.js"></script>
     <script src="//code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="web/angular-libraries/yaml-js/dist/yaml.min.js"></script>
@@ -62,5 +63,6 @@
 
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="Home/Home.js"></script>
+    <script type="text/javascript" src="Mentions/Mentions.js"></script>
 </body>
 </html>
