--- a/Home/tpl/Home-image.html
+++ b/Home/tpl/Home-image.html
@@ -1,4 +1,4 @@
 <div class="thumbnail">
-    <img src="{{ item.image }}" class="img-responsive img" />
+    <a href="{{ item.imageCommons }}" target="_blank" title="{{ page.translation.home.id21 }}"><img src="{{ item.image }}" class="img-responsive img" /></a>
     <div class="caption text-left" ng-include="'Home/tpl/Home-image-caption.html'"></div>
 </div>
