--- a/Home/tpl/Home-top-contentEN.html
+++ b/Home/tpl/Home-top-contentEN.html
@@ -7,18 +7,18 @@
 </div>
 <br />
 <div class="text-left">
-    <p style="font-size: 17px !important;"><strong>Wikidata</strong>, la base de données libre et ouverte portée par Wikimedia, <strong>recense à ce jour plus de <a>300.000 oeuvres peintes</a></strong>.
-        Il s'agit d'un fond d'une <strong>richesse extraordinaire</strong>, offrant des possibilités inédites aux chercheurs et professionnels de l'histoire, de l'histoire de l'art, et aux curieux et passionnés.</p>
-    <p style="font-size: 17px !important;"><strong>Pour exploiter au maximum</strong> cette formidable source de richesse, il est impératif de <strong>décrire les œuvres</strong> et tout particulièrement ce qui est représenté sur ces dernières.<br />
-        <strong>À peine de <a>10% de ces œuvres</a></strong> sont actuellement décrites sur Wikidata.</p>
-    <p class="lead text-center">Ce projet ambitionne de décrire les 270.000 autres !</p>
-    <p style="font-size: 17px !important;">Pour cela <strong>nous avons besoin de vous</strong>, internautes qui sans le savoir utilisé quotidiennement les ressources et la richesse de Wikidata, lors de vos recherches sur Wikipédia ou Google.</p>
-    <p style="font-size: 17px !important;">Pour nous aider, rien de plus simple : <strong>décrivez simplement ce que vous voyez</strong>.
-        Si un tableau représente un homme portant un chapeau, saisissez "homme" puis "chapeau".
-        Ces deux petites actions nous permettront ensuite de référencer correctement l'œuvre que vous aurez indexée.</p>
+    <p style="font-size: 17px !important;"><strong>Wikidata</strong>, the free and open database worn by Wikimedia, <strong>lists more than <a href="http://tinyurl.com/y7lv984v" target="_blank">320,000 painted works</a></strong>.
+        It is a fund of <strong>extraordinary richness</strong>, offering unprecedented possibilities to scholars and professionals of history, art history, and curious and enthusiastic.</p>
+    <p style="font-size: 17px !important;"><strong>To make the most</strong> of this tremendous source of wealth, it is imperative to <strong>describe the artworks</strong> and especially what is represented on them.<br />
+        <strong>Just <a href="https://t.co/Hc8hPCNq4u" target="_blank">15% of these works</a> </strong> currently described on Wikidata.</p>
+    <p class="lead text-center">This project aims to describe the other 280,000!</p>
+    <p style="font-size: 17px !important;">For this <strong>we need you</strong>, users who unknowingly use Wikidata's resources and richness on a daily basis when searching Wikipedia or Google.</p>
+    <p style="font-size: 17px !important;">To help us, it's easy: <strong>just describe what you see</strong>.
+        If a picture depicts a man wearing a hat, enter "man" and then "hat".
+        These two small actions will then allow us to correctly reference the work that you have indexed.</p>
 </div>
-<p class="lead"><strong>Merci pour votre contribution !</strong></p>
-<p>Diffuser le projet</p>
+<p class="lead"><strong>Thank you for your contribution !</strong></p>
 <div class="text-center">
     <a ng-click="topManagement()" class="a"><i class="fa fa-5x fa-chevron-up"></i></a>
+    <p class="help-block"><small>Click to hide</small></p>
 </div>
