--- a/Home/tpl/Home-top-contentFR.html
+++ b/Home/tpl/Home-top-contentFR.html
@@ -7,18 +7,18 @@
 </div>
 <br />
 <div class="text-left">
-    <p style="font-size: 17px !important;"><strong>Wikidata</strong>, la base de données libre et ouverte portée par Wikimedia, <strong>recense à ce jour plus de <a>300.000 oeuvres peintes</a></strong>.
+    <p style="font-size: 17px !important;"><strong>Wikidata</strong>, la base de données libre et ouverte portée par Wikimedia, <strong>recense à ce jour plus de <a href="http://tinyurl.com/y7lv984v" target="_blank">320.000 oeuvres peintes</a></strong>.
         Il s'agit d'un fond d'une <strong>richesse extraordinaire</strong>, offrant des possibilités inédites aux chercheurs et professionnels de l'histoire, de l'histoire de l'art, et aux curieux et passionnés.</p>
     <p style="font-size: 17px !important;"><strong>Pour exploiter au maximum</strong> cette formidable source de richesse, il est impératif de <strong>décrire les œuvres</strong> et tout particulièrement ce qui est représenté sur ces dernières.<br />
-        <strong>À peine de <a>10% de ces œuvres</a></strong> sont actuellement décrites sur Wikidata.</p>
-    <p class="lead text-center">Ce projet ambitionne de décrire les 270.000 autres !</p>
+        <strong>À peine de <a href="https://t.co/Hc8hPCNq4u" target="_blank">15% de ces œuvres</a></strong> sont actuellement décrites sur Wikidata.</p>
+    <p class="lead text-center">Ce projet ambitionne de décrire les 280.000 autres !</p>
     <p style="font-size: 17px !important;">Pour cela <strong>nous avons besoin de vous</strong>, internautes qui sans le savoir utilisé quotidiennement les ressources et la richesse de Wikidata, lors de vos recherches sur Wikipédia ou Google.</p>
     <p style="font-size: 17px !important;">Pour nous aider, rien de plus simple : <strong>décrivez simplement ce que vous voyez</strong>.
         Si un tableau représente un homme portant un chapeau, saisissez "homme" puis "chapeau".
         Ces deux petites actions nous permettront ensuite de référencer correctement l'œuvre que vous aurez indexée.</p>
 </div>
 <p class="lead"><strong>Merci pour votre contribution !</strong></p>
-<p>Diffuser le projet</p>
 <div class="text-center">
     <a ng-click="topManagement()" class="a"><i class="fa fa-5x fa-chevron-up"></i></a>
+    <p class="help-block"><small>Cliquez pour replier</small></p>
 </div>
