--- a/Home/tpl/Home-depict-form.html
+++ b/Home/tpl/Home-depict-form.html
@@ -3,7 +3,7 @@
     <div class="input-group input-group-lg">
         <input id="searchInput" ng-model="search.searchStr" type="text" placeholder="{{ page.translation.home.id4 }}" class="form-control" onmouseup="this.select();" ng-focus="resetHideResults()" ng-blur="hideResults()" />
         <span class="input-group-btn">
-            <a ng-click="newDepict()" class="a btn btn-default" type="button" title="{{ page.translation.home.id5 }}"><i class="fa fa-check" aria-hidden="true"></i></a>
+            <a ng-click="submit.newDepict()" class="a btn" ng-class="submit.depictButton" type="button" title="{{ page.translation.home.id5 }}"><i class="fa fa-check" aria-hidden="true"></i></a>
         </span>
     </div>
 </div>
