--- a/Mentions/tpl/Mentions-en.html
+++ b/Mentions/tpl/Mentions-en.html
@@ -1,6 +1,7 @@
 <h2>Mentions légales</h2>
-<p>Le projet <strong>ImageDescription</strong> a pour objectif de fournir des données descriptives à propos des oeuvres peintes au projet <a href="http://wikidata.org/" target="_blank">Wikidata</a>.<br />
-    Dans le cadre du projet ImageDescription, toutes les contributions et données produites par les utilisateurs, les contributeurs et le projet sont placées irrévocablement sous <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">licence CC-0</a>.<br />
-    Les données produites dans le cadre du projet ImageDescription par les utilisateurs et contributeurs seront reversées sur le projet <a href="http://wikidata.org/" target="_blank">Wikidata</a>. Les contributions ne seront pas créditées et ne pourront être demandées à être créditées sur le projet <a href="http://wikidata.org/" target="_blank">Wikidata</a>.</p>
-<p>La contribution au projet ImageDescription est ouverte à toute personne souhaitant participer. Les contributions des utilisateurs sont soumises à l'appréciation des personnes administrant le projet ou son serveur d'hébergement. Les contributions pourront être publiées, modifiées ou supprimées par les personnes administrant le projet ou l'hébergement du projet sans préavis.</p>
-<p>La contribution au projet ImageDescription implique l'acceptation des règles établies ci-dessus.</p>
+<p>The <strong>ImageDescription</strong> project aims to provide descriptive data about works painted in the project <a href="http://wikidata.org/" target="_blank">Wikidata</a>.<br />
+    All contributions and data produced by users, contributors and the project are irrevocably placed under <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">CC-0 license</a>.<br />
+    The data produced by the users and contributors of the project ImageDescription will be pushed to the <a href="http://wikidata.org/" target="_blank">Wikidata</a> project.
+    Contributions will not be credited and will not be eligible to be credited to the <a href="http://wikidata.org/" target="_blank">Wikidata</a> project.</p>
+<p>The contribution to the ImageDescription project is open to anyone wishing to participate. Users' contributions are subject to the discretion of the persons administering the project or its hosting server. Contributions may be published, modified or deleted by those administering the project or hosting the project without notice.</p>
+<p>The contribution to the ImageDescription project implies acceptance of the rules set out above.</p>
